--- a/scss/components/_bcalc.scss
+++ b/scss/components/_bcalc.scss
@@ -33,6 +33,15 @@
 
 #bcalc {
 
+  #controls {
+    tr {
+      th {
+        width: auto;
+        vertical-align: baseline;
+      }
+    }
+  }
+
   input {
     color: $color-offwhite;
     background-color: $color-borders;
