--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -21,9 +21,9 @@
         padding: 0.25rem 1rem;
 
         &:hover {
-          color: var(--col-text-main);
+          color: $color-offwhite;
           background: $color-primary;
-          background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
+          //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
           text-decoration: none;
         }
       }
@@ -102,7 +102,7 @@ span.small.notice_warning {
 
       th,
       td {
-        color: var(--col-text-main);
+        color: $color-offwhite;
         font-size: var(--txt-small);
       }
     }
