--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -48,7 +48,7 @@ h2 {
   padding: 0.5rem 0;
   font-weight: bold;
   text-transform: uppercase;
-  font-size: var(--txt-small);
+  font-size: 1.2rem;
   color: $color-offwhite;
   background: $color-borders;
   background: linear-gradient(180deg, $color-borders 0%, $color-borders 15%, $color-borders 100%) !important;
