--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -13,7 +13,8 @@
   margin-bottom: 0.5rem;
   background: $color-borders;
   //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
-  font-size: 1rem;
+  font-size: 1.3rem;
+  text-shadow: 1px 1px 0px #000000;
 }
 
 .research,
