--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -179,6 +179,14 @@
           }
         }
 
+        .ally_def_details,
+        .ally_def_attackers {
+          .alliance_def_valid {
+            border: 1px solid #00FF00 !important;
+            box-shadow: inset 0 0 7px 1px #00FF00;
+          }
+        }
+
         .ally_def_details {
           input[type="button"] {
             margin: 2px 0;
