--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -3,6 +3,11 @@
 #contents {
   grid-column: 2 / 4;
   margin: 0.5rem 0;
+  @include respond-below(sm) {
+    grid-row: 3/3;
+    grid-column: 2 / 2;
+    max-width: calc(100vw - 114px);
+  }
 }
 
 #contents_header,
