--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -116,6 +116,8 @@ option {
     grid-template-columns: 100px auto;
     grid-template-rows: 165px auto auto;
     grid-row-gap: 0;
+    padding: 0;
+    max-width: 100vw;
   }
 }
 
