--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -201,11 +201,11 @@
         }
 
         .mission_attack {
-          background-color: rgba($color-negative, 0.12);
+          background-color: unset;
         }
 
         .relations_war {
-          background-color: rgba($color-negative, 0.3);
+          background-color: rgba($color-negative, 0.15);
         }
 
 
