--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -5,6 +5,8 @@
       &:nth-last-child(3) {
         table {
           tr {
+            background-color: #23303f;
+
             th,
             td {
               width: auto !important;
@@ -14,14 +16,14 @@
               }
 
               &:nth-child(2) {
-                flex: 2;
+                flex: 3;
                 @include respond-below(sm) {
                   display: none;
                 }
               }
 
               &:nth-child(3) {
-                flex: 2;
+                flex: 3;
               }
 
               &:nth-child(4) {
@@ -43,10 +45,14 @@
               }
 
               &:nth-child(7) {
-                flex: 2;
+                flex: 3;
               }
 
               &:nth-child(8) {
+                flex: 3;
+              }
+
+              &:nth-child(9) {
                 flex: 3;
               }
             }
@@ -59,14 +65,14 @@
       a {
         color: $color-text;
         @include respond-below(sm) {
-          padding: 0 8px;
+          padding: 0 .5rem;
         }
       }
 
       tr {
         display: flex;
         justify-content: space-between;
-        margin: 2px 0;
+        margin: .125rem 0;
         @include respond-below(sm) {
           flex-wrap: wrap;
           justify-content: center;
@@ -76,10 +82,11 @@
           font-weight: bold;
           background: $color-borders;
           color: $color-text;
-          padding: 12px 0;
+          padding: .75rem 0;
+          font-size: .75rem;
 
           &.right {
-            padding-right: 5px;
+            padding-right: .25rem;
           }
         }
 
@@ -91,6 +98,12 @@
           &.gc {
             color: $color-text;
           }
+        }
+
+        th,
+        td {
+          display: flex;
+          align-items: center;
         }
       }
     }
