--- a/scss/components/_overview.scss
+++ b/scss/components/_overview.scss
@@ -173,6 +173,10 @@
   background-color: rgba($color-negative, .14);
 }
 
+.mission_return {
+  opacity: .5;
+}
+
 .mission_defend {
   color: #00AA00;
   background: rgba($color-positive, 0.14);
