--- a/scss/components/_galaxy_forum.scss
+++ b/scss/components/_galaxy_forum.scss
@@ -1,9 +1,8 @@
-
 /* GALAXY FORUM
    -------------------------------------------------------*/
 .forum_description {
   font-size: var(--txt-small);
-  color: var(--col-text-main);
+  color: $color-offwhite;
 }
 
 .forum {
@@ -48,7 +47,7 @@ div[class^='forum_thread_header'] {
     text-decoration: none;
 
     &:after {
-      color: var(--col-text-main);
+      color: $color-offwhite;
     }
   }
 
@@ -138,6 +137,7 @@ div[class^='forum_thread_header'] {
 .mceStatusbarBottom {
   border-style: solid !important;
   border-color: $color-primary !important;
+  background: transparent !important;
 }
 
 .mceEditor {
@@ -161,6 +161,7 @@ div[class^='forum_thread_header'] {
 #editor > .center,
 #editor + .center {
   font-size: var(--txt-small);
+
   a {
     display: inline-block;
     margin-right: 1rem;
