--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -2,7 +2,7 @@
   .new {
     th,
     td {
-      background: rgba($color-positive, 0.25);
+      background: rgba($color-positive, .05);
     }
   }
 }
