--- a/scss/components/_covert_ops.scss
+++ b/scss/components/_covert_ops.scss
@@ -55,8 +55,8 @@
     display: block;
     padding: 0.25rem 0.5rem;
     margin-bottom: 0.5rem;
-    background: var(--col-panel-light);
-    background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
+    background: $color-borders;
+    //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
     font-size: 1rem;
   }
 
