--- a/scss/components/_galaxy_forum.scss
+++ b/scss/components/_galaxy_forum.scss
@@ -120,7 +120,7 @@ div[class^='forum_thread_header'] {
 }
 
 .forum_post_seperator {
-  border-top: 1px solid var(--col-panel-dark);
+  border-top: 1px solid $color-offwhite;
   margin: 1rem 0.5rem;
 }
 
