--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -149,23 +149,23 @@
 
 .ter,
 #page_manual .Ter td {
-  color: var(--col-terran);
+  color: $color-terran;
 
 }
 
 .cat,
 #page_manual .Cat td {
-  color: var(--col-cathaar);
+  color: $color-cathaar;
 }
 
 .xan,
 #page_manual .Xan td {
-  color: var(--col-xandathrii);
+  color: $color-xandathrii;
 }
 
 .zik,
 #page_manual .Zik td {
-  color: var(--col-zikonian);
+  color: $color-zikonian;
 }
 
 .etd,
