--- a/scss/components/_top_bar.scss
+++ b/scss/components/_top_bar.scss
@@ -39,7 +39,7 @@
     text-decoration: none;
 
     &:before, &:after {
-      color: var(--col-alert-light);
+      color: $color-neutral;
     }
   }
 }
