--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -28,6 +28,8 @@ $color-positive: limegreen;
 $color-neutral: orange;
 $color-negative: red;
 //
+$color-emp: #41c9ff;
+//
 $color-terran: #a18181;
 $color-cathaar: #4d88bc;
 $color-xandathrii: #2ba87e;
