--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -1,6 +1,9 @@
 //
 // variables for the skin
 //
+$text-default: .9rem;
+$text-small: .75rem;
+//
 $color-primary: #52a5f8;
 $color-primary-dark: darken($color-primary, 20%);
 $color-secondary: #010304;
