--- a/scss/components/_covert_ops.scss
+++ b/scss/components/_covert_ops.scss
@@ -71,11 +71,11 @@
     position: absolute;
     top: 3px;
     right: 2rem;
-    font-size: var(--txt-small);
+    font-size: $text-small;
   }
 
   .resources {
-    font-size: var(--txt-small);
+    font-size: $text-small;
     margin-top: 0.15rem;
     padding-left: 0.5rem;
     display: flex;
