--- a/scss/components/_login_support_manual_stats.scss
+++ b/scss/components/_login_support_manual_stats.scss
@@ -55,7 +55,7 @@
 }
 
 #page_login form.login label, #page_support form label {
-  font-size: var(--txt-small);
+  font-size: $text-small;
   text-transform: uppercase;
   width: 80%;
   margin: 0 auto;
@@ -186,7 +186,7 @@
 
   span[style="color: lime;"] {
     color: $color-text !important;
-    font-size: var(--txt-small);
+    font-size: $text-small;
     margin-left: 1rem;
     padding-left: 0.5rem;
     border-left: 5px solid $color-negative;
@@ -196,7 +196,7 @@
 
   .tech_table td:last-child {
     color: $color-text;
-    font-size: var(--txt-small);
+    font-size: $text-small;
     vertical-align: middle;
   }
 
