--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -31,7 +31,9 @@ $color-positive: limegreen;
 $color-neutral: orange;
 $color-negative: red;
 //
+$color-killed: #ff4444;
 $color-emp: #41c9ff;
+$color-stolen: orange;
 //
 $color-terran: #a18181;
 $color-cathaar: #4d88bc;
